plugins {
    id 'java'
    id 'checkstyle'
    id 'com.gradleup.shadow' version '9.4.3'
    id 'application'
    id 'jacoco'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'seedu.address.Main'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

repositories {
    mavenCentral()
}

checkstyle {
    toolVersion = '13.6.0'
}

jacoco {
    toolVersion = '0.8.15'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
    finalizedBy jacocoTestReport
}

tasks.register('coverage', JacocoReport) {
    dependsOn test

    sourceDirectories.from files(sourceSets.main.allSource.srcDirs)
    classDirectories.from files(sourceSets.main.output)
    executionData.from files(jacocoTestReport.executionData)
    reports {
        html.required.set(true)
        xml.required.set(true)
    }
}

dependencies {
    String javaFxVersion = '25.0.3'

    implementation platform('com.fasterxml.jackson:jackson-bom:2.22.0')

    implementation "org.openjfx:javafx-base:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-base:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-base:${javaFxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-base:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:linux"

    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    testImplementation 'org.junit.jupiter:junit-jupiter:6.1.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

shadowJar {
    archiveFileName.set('addressbook.jar')
}

defaultTasks 'clean', 'test'
